<resources>
    <string name="app_name" translatable="false">FuelSpot</string>
    <string name="google_key" translatable="false">AIzaSyAYL33WnxHUGcetc-pO-ZbcjqKw7PCmq_c</string>
    <string name="facebook_app_id" translatable="false">380327342377274</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb380327342377274</string>
    <string name="admobAppId" translatable="false">ca-app-pub-6610790679720108~8710500827</string>
    <string name="interstitial_admob" translatable="false">ca-app-pub-6610790679720108/1277969021</string>
    <string name="banner_admob" translatable="false">ca-app-pub-6610790679720108/6457702530</string>
    <string name="copyright_text" translatable="false">© FuelSpot 2020 - Made with ♥ in Ankara</string>
    <string name="copyright_short" translatable="false">© FuelSpot 2020</string>
    <string name="unitSystem1" translatable="false">Litre</string>
    <string name="unitSystem2" translatable="false">Galon</string>
    <string name="unitSystem3" translatable="false">Imperial galon</string>
    <string name="electricity_unit" translatable="false">kWh</string>
    <string name="hour">hour</string>
    <string name="minute">mins</string>
    <string name="facebook_page_url" translatable="false">https://www.facebook.com/fuelspotapp</string>
    <string name="twitter_page_url" translatable="false">https://twitter.com/fuelspotapp</string>
    <string name="instagram_page_url" translatable="false">https://www.instagram.com/fuelspot</string>
    <string name="youtube_page_url" translatable="false">https://www.youtube.com/channel/UCy7-mbEFFvOyaPYfhQRReyw</string>
    <string name="API_CREATE_USER" translatable="false">https://fuelspot.com.tr/api/v1.0/user/create.php</string>
    <string name="API_UPDATE_USER" translatable="false">https://fuelspot.com.tr/api/v1.0/user/update.php</string>
    <string name="API_SUPERUSER_CREATE" translatable="false">https://fuelspot.com.tr/api/v1.0/superuser/create.php</string>
    <string name="API_SUPERUSER_UPDATE" translatable="false">https://fuelspot.com.tr/api/v1.0/superuser/update.php</string>
    <string name="API_UPDATE_STATION" translatable="false">https://fuelspot.com.tr/api/v1.0/station/update.php</string>
    <string name="API_SEARCH_STATIONS" translatable="false">https://fuelspot.com.tr/api/v1.0/station/search.php</string>
    <string name="API_FETCH_STATION" translatable="false">https://fuelspot.com.tr/api/v1.0/station/fetch.php</string>
    <string name="API_FETCH_SUPERUSER_STATIONS" translatable="false">https://fuelspot.com.tr/api/v1.0/station/fetch-superuser.php</string>
    <string name="API_SUPERUSER_REGISTRATION" translatable="false">https://fuelspot.com.tr/api/v1.0/station/superuser-registration.php</string>
    <string name="API_ADD_AUTOMOBILE" translatable="false">https://fuelspot.com.tr/api/v1.0/automobile/add.php</string>
    <string name="API_UPDATE_AUTOMOBILE" translatable="false">https://fuelspot.com.tr/api/v1.0/automobile/update.php</string>
    <string name="API_DELETE_AUTOMOBILE" translatable="false">https://fuelspot.com.tr/api/v1.0/automobile/delete.php</string>
    <string name="API_FETCH_USER_AUTOMOBILES" translatable="false">https://fuelspot.com.tr/api/v1.0/automobile/fetch-user.php</string>
    <string name="API_FETCH_AUTOMOBILE_MODELS" translatable="false">https://fuelspot.com.tr/api/v1.0/automobile/fetch-models.php</string>
    <string name="API_ADD_PURCHASE" translatable="false">https://fuelspot.com.tr/api/v1.0/purchase/add.php</string>
    <string name="API_UPDATE_PURCHASE" translatable="false">https://fuelspot.com.tr/api/v1.0/purchase/update.php</string>
    <string name="API_DELETE_PURCHASE" translatable="false">https://fuelspot.com.tr/api/v1.0/purchase/delete.php</string>
    <string name="API_FETCH_AUTOMOBILE_PURCHASES" translatable="false">https://fuelspot.com.tr/api/v1.0/purchase/fetch-automobile.php</string>
    <string name="API_ADD_COMMENT" translatable="false">https://fuelspot.com.tr/api/v1.0/comment/add.php</string>
    <string name="API_UPDATE_COMMENT" translatable="false">https://fuelspot.com.tr/api/v1.0/comment/update.php</string>
    <string name="API_DELETE_COMMENT" translatable="false">https://fuelspot.com.tr/api/v1.0/comment/delete.php</string>
    <string name="API_FETCH_USER_COMMENTS" translatable="false">https://fuelspot.com.tr/api/v1.0/comment/fetch.php</string>
    <string name="API_FETCH_STATION_COMMENTS" translatable="false">https://fuelspot.com.tr/api/v1.0/comment/fetch-station.php</string>
    <string name="API_ADD_ANSWER" translatable="false">https://fuelspot.com.tr/api/v1.0/comment/answer/add.php</string>
    <string name="API_DELETE_ANSWER" translatable="false">https://fuelspot.com.tr/api/v1.0/comment/answer/delete.php</string>
    <string name="API_FETCH_LAST_COMMENTS" translatable="false">https://fuelspot.com.tr/api/v1.0/comment/fetch-last.php</string>
    <string name="API_CREATE_CAMPAING" translatable="false">https://fuelspot.com.tr/api/v1.0/campaign/add.php</string>
    <string name="API_UPDATE_CAMPAING" translatable="false">https://fuelspot.com.tr/api/v1.0/campaign/update.php</string>
    <string name="API_DELETE_CAMPAING" translatable="false">https://fuelspot.com.tr/api/v1.0/campaign/delete.php</string>
    <string name="API_FETCH_CAMPAINGS" translatable="false">https://fuelspot.com.tr/api/v1.0/campaign/fetch.php</string>
    <string name="API_FETCH_GLOBAL_CAMPAINGS" translatable="false">https://fuelspot.com.tr/api/v1.0/campaign/fetch-global.php</string>
    <string name="API_FETCH_OLD_CAMPAINGS" translatable="false">https://fuelspot.com.tr/api/v1.0/campaign/fetch-old.php</string>
    <string name="API_FETCH_STATION_PRICES" translatable="false">https://fuelspot.com.tr/api/v1.0/finance/fetch-station-prices.php</string>
    <string name="API_FETCH_COUNTRY_PRICES" translatable="false">https://fuelspot.com.tr/api/v1.0/finance/fetch-prices.php</string>
    <string name="API_FETCH_INBOX" translatable="false">https://fuelspot.com.tr/api/v1.0/inbox/fetch-messages.php</string>
    <string name="API_SEND_MESSAGE" translatable="false">https://fuelspot.com.tr/api/v1.0/inbox/send-message.php</string>
    <string name="API_REPORT" translatable="false">https://fuelspot.com.tr/api/v1.0/other/report.php</string>
    <string name="API_TAX" translatable="false">https://fuelspot.com.tr/api/v1.0/other/tax.php</string>
    <string name="API_FEEDBACK" translatable="false">https://fuelspot.com.tr/api/v1.0/other/feedback.php</string>
    <string name="API_NEWS" translatable="false">https://fuelspot.com.tr/api/v1.0/other/news.php</string>
    <string name="API_NEWS_SINGLE" translatable="false">https://fuelspot.com.tr/api/v1.0/other/news-single.php</string>
    <string name="API_COMPANY" translatable="false">https://fuelspot.com.tr/api/v1.0/other/company.php</string>
    <string name="API_BANKING" translatable="false">https://fuelspot.com.tr/api/v1.0/other/banking.php</string>
    <string name="API_ORDER" translatable="false">https://fuelspot.com.tr/api/v1.0/other/order.php</string>
    <string name="API_FETCH_ORDER" translatable="false">https://fuelspot.com.tr/api/v1.0/other/fetch-order.php</string>
    <string name="last_ads_info">You have viewed last advertisement. You won\'t see more advertisement on this session.</string>
    <string name="exit">Touch again to exit the application.</string>
    <string name="distributors">Distributors</string>
    <string name="add_photo">Add photo</string>
    <string name="bill">Bill</string>
    <string name="delete">Delete</string>
    <string name="away">away</string>
    <string name="data_loading">Loading data</string>
    <string name="loginWithGoogle">Login with Google</string>
    <string name="loginWithFacebook">Login with Facebook</string>
    <string name="loginWithSuperUser">Are you station owner?</string>
    <string name="logging_in">Logging in</string>
    <string name="login_successful">Login successful. You are redirecting to the app&#8230;</string>
    <string name="error_login_fail">There was an error logging in. Please try again later&#8230;</string>
    <string name="welcome_fuelspot">Welcome to FuelSpot!</string>
    <string name="welcome_fuelspot_long">FuelSpot is the platform which you can track gas prices, recent news in addition to vehicle track (average consumption, emission…) and many more!</string>
    <string name="welcome_permission_text">Account created. We need location permission to showing nearest stations!</string>
    <string name="button_continue">Continue</string>
    <string name="do_you_have_car">Do you have a car?</string>
    <string name="yes">Yes</string>
    <string name="no_later">No / I will add it later</string>
    <string name="add_vehicle_desc">By adding your vehicle into FuelSpot, you will get 1&#37; for every fuel intake! You can spend your bonus on FuelSpot Store.\n\nThis campaign is only valid for personal vehicles and motorcycles. Retail purchases are not eligible for this campaign.</string>
    <string name="brand">Brand</string>
    <string name="vehicle_model">Model</string>
    <string name="primary_fuel_type">Primary fuel type</string>
    <string name="no">NO</string>
    <string name="gasoline">Gasoline</string>
    <string name="diesel">Diesel</string>
    <string name="lpg">LPG</string>
    <string name="distance">Distance</string>
    <string name="electricity">Electricity</string>
    <string name="gasoline2">2nd Gasoline</string>
    <string name="diesel2">2nd Diesel</string>
    <string name="secondary_fuel_type">Secondary fuel type</string>
    <string name="secondary_fuel_type_desc">If you don\'t have secondary fuel system, select NO</string>
    <string name="kilometer">Kilometer</string>
    <string name="plate_no">Plate no</string>
    <string name="got_it">Got it!</string>
    <string name="info_saved_welcome">Your information was saved. Welcome to FuelSpot!</string>
    <string name="enter_plate_no">Please enter your plate no</string>
    <string name="plate_no_exist">This plate no has been added to system…</string>
    <string name="vehicle_added">Automobile added</string>
    <string name="error">An error occurred. Please try again later…</string>
    <string name="location_fetching">Location info fetching…</string>
    <string name="permission_denied">Permission denied&#8230;</string>
    <string name="location_services_off">Location services is not enabled. Please turn your location services on and try again…</string>
    <string name="tab_stations">Stations</string>
    <string name="tab_news">Latest</string>
    <string name="tab_vehicle">Vehicle</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_settings">Settings</string>
    <string name="popup_filter_desc">Pick the distributors you want to see and filter unwanted stations!</string>
    <string name="remove_filters">Remove all filters to show all stations.</string>
    <string name="popup_filter_desc2">By filtering facilities, you can find whatever you need easily.</string>
    <string name="order">Order</string>
    <string name="menu_filter">Filter</string>
    <string name="apply">Apply</string>
    <string name="see_all">See all</string>
    <string name="show_less">Show less</string>
    <string name="station_found_pretext">We found</string>
    <string name="station_found_aftertext">station(s) nearby.</string>
    <string name="fab_report">Report station</string>
    <string name="send_report">Send report</string>
    <string name="wc">WC</string>
    <string name="market">Market</string>
    <string name="carwash">Car wash</string>
    <string name="tire_store">Tire store</string>
    <string name="mechanic">Mechanic</string>
    <string name="restaurant">Restaurant</string>
    <string name="parkspot">Park spot</string>
    <string name="atm">ATM</string>
    <string name="motel">Motel</string>
    <string name="coffee_shop">Coffee Shop</string>
    <string name="mosque">Mosque</string>
    <string name="cancel">Cancel</string>
</resources>