<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/reportStationLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="#ffffff">

    <TextView
        android:id="@+id/campaignPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/gotham_black"
        android:gravity="center"
        android:text="@string/fab_report"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/campaignPhoto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:entries="@array/report_reasons"
        android:padding="8dp" />

    <EditText
        android:id="@+id/editTextReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <ImageView
        android:id="@+id/imageViewReport"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/editTextReport"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        app:srcCompat="@drawable/photo_placeholder" />

    <Button
        android:id="@+id/sendReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewReport"
        android:layout_marginTop="8dp"
        android:background="#FF6838"
        android:text="@string/send_report"
        android:textColor="#f0f0f0" />

    <ImageView
        android:id="@+id/imageViewClose"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="2dp"
        android:contentDescription="@string/cancel"
        app:srcCompat="@drawable/cancel" />

</RelativeLayout>